--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="nav-bar">
     <ul>
         <li class="nav-logo">
-            <a href=""><span>Pollllll</span></a>
+            <a href=""><span>LOGO</span></a>
         </li>
         <li class="<%= name === 'index' ? 'nav-item nav-item-active' : 'nav-item' %>">
             <a href="/"
