--- a/views/add.ejs
+++ b/views/add.ejs
@@ -5,27 +5,25 @@
         <h1>Poll toevoegen</h1>
     </header>
     <main>
-        <form action="">
+        <form method="POST">
             <fieldset>
                 <label for="">Titel</label>
-                <input type="text" name="poll-title" id="" placeholder="Type je vraag hier" />
-            </fieldset>
-            <fieldset>
+                <input type="text" name="title" id="" placeholder="Type je vraag hier" required />
                 <label for="">Antwoorden</label>
                 <ul>
                     <li>
-                        <input type="text" name="poll-answer" id="" />
+                        <input type="text" name="answers" id="" required />
                     </li>
                     <li>
-                        <input type="text" name="poll-answer" id="" />
+                        <input type="text" name="answers" id="" required />
                     </li>
                 </ul>
                 <button>Extra antwoord</button>
             </fieldset>
-            <label><input type="checkbox" name="" id="" />Meerdere antwoorden mogelijk?</label>
+            <label><input type="checkbox" name="multiple" id="" />Meerdere antwoorden mogelijk?</label>
             <div class="submit-buttons">
-                <button type="submit">Sla concept op</button>
-                <button type="submit">Maak aan</button>
+                <button type="submit" formaction="/save-poll">Sla concept op</button>
+                <button type="submit" formaction="/add-poll">Maak aan</button>
             </div>
         </form>
     </main>
