--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="nav-bar">
     <ul>
         <li class="nav-logo">
-            <a href=""><span>LOGO</span></a>
+            <span>POLLO</span>
         </li>
         <li class="<%= name === 'index' ? 'nav-item nav-item-active' : 'nav-item' %>">
             <a href="/"
@@ -70,7 +70,7 @@
                         </g>
                     </g>
                 </svg>
-                <span>Poll maken</span></a
+                <span>Poll aanmaken</span></a
             >
         </li>
         <li class="<%= name === 'profile' ? 'nav-item nav-item-active' : 'nav-item' %>">
