--- a/views/add.ejs
+++ b/views/add.ejs
@@ -2,30 +2,37 @@
 <body>
     <%- include('./partials/nav.ejs') %>
     <header>
-        <h1>Poll toevoegen</h1>
+        <div class="width-container">
+            <h1>Poll toevoegen</h1>
+        </div>
     </header>
     <main>
-        <form method="POST">
-            <fieldset>
-                <label for="">Titel</label>
-                <input type="text" name="title" id="" placeholder="Type je vraag hier" required />
-                <label for="">Antwoorden</label>
-                <ul>
-                    <li>
-                        <input type="text" name="answers" id="" required />
-                    </li>
-                    <li>
-                        <input type="text" name="answers" id="" required />
-                    </li>
-                </ul>
-                <button>Extra antwoord</button>
-            </fieldset>
-            <label><input type="checkbox" name="multiple" id="" />Meerdere antwoorden mogelijk?</label>
-            <div class="submit-buttons">
-                <button type="submit" formaction="/save-poll">Sla concept op</button>
-                <button type="submit" formaction="/add-poll">Maak aan</button>
-            </div>
-        </form>
+        <div class="width-container">
+            <form method="POST">
+                <fieldset>
+                    <label class="h2" for="title">Titel</label>
+                    <input type="text" name="title" id="title" placeholder="Type je vraag hier" required />
+                    <label class="h2" for="answer1">Antwoorden</label>
+                    <ul class="answer-container">
+                        <li>
+                            <input type="text" name="answers" placeholder="Antwoord 1" id="answer1" required />
+                        </li>
+                        <li>
+                            <input type="text" name="answers" placeholder="Antwoord 2" id="" required />
+                        </li>
+                    </ul>
+                    <div class="add-remove-buttons">
+                        <button id="add-answer" type="button" class="btn">Extra antwoord</button>
+                        <button id="remove-answer" type="button" class="btn">Verwijder antwoord</button>
+                    </div>
+                </fieldset>
+                <label class="checkbox-label"><input type="checkbox" name="multiple" id="" />Meerdere antwoorden mogelijk?</label>
+                <div class="submit-buttons">
+                    <button class="btn btn-prim" type="submit" formaction="/add-poll">Maak aan</button>
+                    <button class="btn" type="submit" formaction="/save-poll" formnovalidate>Sla concept op</button>
+                </div>
+            </form>
+        </div>
     </main>
 </body>
 <%- include('./partials/foot') %>
