--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,6 +9,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/css/style.css" />
-        <script type="module" src="/js/main.js"></script>
+        <script defer src="/js/main.js"></script>
     </head>
 </html>
