--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,23 @@ progress bar text links rechts
 meerdere opties of 1
 webkit prefix
 add answer
-concept opslaan/verwijderen
+concept opslaan/verwijderen met meerder opties
+filter vervangen met fill svg
+progressive inputs
+progressive svg zonder css
+flex niet optimaal, geen wrap, space btwn
+wireflow?
+progressive aantal antwoorden laten zien -> zonder js alles
+lege velden niet posten
+concept pagina antw ipv votes
 
 todo --
-Form validate
+Form validate ?
+var let
+deploy
+share links
+feature detection cookies
+kleuren?
 */
 
 *,
@@ -115,7 +128,7 @@ main {
     background-color: #ffffff;
     position: fixed;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     height: 4rem;
     font-weight: 500;
     box-shadow: 0px -5px 15px 3px #f1f4ff;
@@ -437,6 +450,14 @@ label.h2 {
 
 .result-bar text {
     font-weight: 500;
+}
+
+p.error {
+    padding-top: 1rem;
+}
+
+.hidden {
+    display: none;
 }
 
 @media screen and (min-width: 40rem) {
