--- a/views/add.ejs
+++ b/views/add.ejs
@@ -11,17 +11,29 @@
             <form method="POST">
                 <fieldset>
                     <label class="h2" for="title">Titel</label>
-                    <input type="text" name="title" id="title" placeholder="Type je vraag hier" required />
+                    <input class="form-validate" type="text" name="title" id="title" placeholder="Type je vraag hier" required />
                     <label class="h2" for="answer1">Antwoorden</label>
                     <ul class="answer-container">
                         <li>
-                            <input type="text" name="answers" placeholder="Antwoord 1" id="answer1" required />
+                            <input class="form-validate" type="text" name="answers" placeholder="Antwoord 1" id="answer1" required />
                         </li>
                         <li>
-                            <input type="text" name="answers" placeholder="Antwoord 2" id="" required />
+                            <input class="form-validate" type="text" name="answers" placeholder="Antwoord 2" required />
+                        </li>
+                        <li class="js-hide">
+                            <input class="form-validate" type="text" name="answers" placeholder="Antwoord 3" />
+                        </li>
+                        <li class="js-hide">
+                            <input class="form-validate" type="text" name="answers" placeholder="Antwoord 4" />
+                        </li>
+                        <li class="js-hide">
+                            <input class="form-validate" type="text" name="answers" placeholder="Antwoord 5" />
+                        </li>
+                        <li class="js-hide">
+                            <input class="form-validate" type="text" name="answers" placeholder="Antwoord 6" />
                         </li>
                     </ul>
-                    <div class="add-remove-buttons">
+                    <div class="add-remove-buttons hidden">
                         <button id="add-answer" type="button" class="btn">Extra antwoord</button>
                         <button id="remove-answer" type="button" class="btn">Verwijder antwoord</button>
                     </div>
@@ -34,5 +46,6 @@
             </form>
         </div>
     </main>
+    <script defer src="/js/main.js"></script>
 </body>
 <%- include('./partials/foot') %>
