--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,11 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title><%= title %> - Poll appje</title>
+        <title><%= title %> - Node Poll</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/css/style.css" />
-        <script defer src="/js/main.js"></script>
     </head>
 </html>
