--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="nav-bar">
     <ul>
         <li class="nav-logo">
-            <span>POLLO</span>
+            <img src="/img/logo.svg" alt="" />
         </li>
         <li class="<%= name === 'index' ? 'nav-item nav-item-active' : 'nav-item' %>">
             <a href="/"
